Project: Refactor packages
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/contact_author_dialog_layout.xml
+++ b/app/src/main/res/layout/contact_author_dialog_layout.xml
@@ -12,7 +12,7 @@
         android:gravity="center_vertical"
         android:padding="16dp">
 
-        <moe.feng.danmaqua.ui.view.CircleImageView
+        <moe.feng.danmaqua.ui.common.view.CircleImageView
             android:id="@+id/avatarView"
             android:layout_width="48dp"
             android:layout_height="48dp"
