--- a/app/src/main/res/layout/manage_subscription_item_view.xml
+++ b/app/src/main/res/layout/manage_subscription_item_view.xml
@@ -21,7 +21,7 @@
         android:src="@drawable/ic_drag_indicator_24"
         android:tint="?android:attr/textColorTertiary"/>
 
-    <moe.feng.danmaqua.ui.view.CircleImageView
+    <moe.feng.danmaqua.ui.common.view.CircleImageView
         android:id="@+id/avatarView"
         android:layout_width="48dp"
         android:layout_height="48dp"
