--- a/app/src/main/res/layout/recommended_streamer_list_item.xml
+++ b/app/src/main/res/layout/recommended_streamer_list_item.xml
@@ -43,7 +43,7 @@
                     android:orientation="horizontal"
                     android:gravity="center_vertical">
 
-                    <moe.feng.danmaqua.ui.view.CircleImageView
+                    <moe.feng.danmaqua.ui.common.view.CircleImageView
                         android:id="@+id/avatarView"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
