--- a/app/src/main/res/layout/main_toolbar_layout.xml
+++ b/app/src/main/res/layout/main_toolbar_layout.xml
@@ -32,7 +32,7 @@
             android:layout_height="36dp"
             android:layout_marginEnd="12dp">
 
-            <moe.feng.danmaqua.ui.view.CircleImageView
+            <moe.feng.danmaqua.ui.common.view.CircleImageView
                 android:id="@+id/avatarView"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
