--- a/app/src/main/res/layout/view_vtubers_single_item.xml
+++ b/app/src/main/res/layout/view_vtubers_single_item.xml
@@ -17,7 +17,7 @@
         android:focusable="true"
         android:background="?android:attr/selectableItemBackground">
 
-        <moe.feng.danmaqua.ui.view.CircleImageView
+        <moe.feng.danmaqua.ui.common.view.CircleImageView
             android:id="@+id/avatarView"
             android:layout_width="48dp"
             android:layout_height="48dp"
