UI: Apply some views for data binding
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/danmaku_simple_item_view.xml
+++ b/app/src/main/res/layout/danmaku_simple_item_view.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:background="?android:attr/selectableItemBackground">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <import type="moe.feng.danmaqua.model.BiliChatDanmaku"/>
+        <variable name="data" type="BiliChatDanmaku" />
+    </data>
 
-    <TextView
-        android:id="@android:id/text1"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="TestUser 12345"/>
+        android:padding="16dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?android:attr/selectableItemBackground">
 
-</FrameLayout>
+        <TextView
+            android:id="@android:id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:htmlText="@{@string/main_danmaku_text_format(data.senderName, data.text)}"
+            tools:text="TestUser 12345"/>
+
+    </FrameLayout>
+
+</layout>
