--- a/app/src/main/res/layout/room_info_dialog_content.xml
+++ b/app/src/main/res/layout/room_info_dialog_content.xml
@@ -1,104 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <import type="moe.feng.danmaqua.model.RoomInfo"/>
+        <import type="android.view.View"/>
+        <variable name="room" type="RoomInfo"/>
+    </data>
 
-    <LinearLayout
-        android:id="@+id/contentView"
-        android:orientation="vertical"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/contentView"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/room_info_room_title"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
-        <TextView
-            android:id="@+id/roomTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            tools:text="【测试直播】"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:padding="16dp"
+            app:isGone="@{room == null}">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/room_info_user_name_and_id"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
-        <TextView
-            android:id="@+id/userName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            tools:text="夏色祭Official (123456)"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/room_info_room_title"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+            <TextView
+                android:id="@+id/roomTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@{room.data.title}"
+                tools:text="【测试直播】"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/room_info_user_name_and_id"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@{Long.toString(room.data.uid)}"
+                tools:text="夏色祭Official (123456)"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/room_info_room_id"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+            <TextView
+                android:id="@+id/roomId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@{Long.toString(room.data.roomId)}"
+                tools:text="123456"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/room_info_area"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+            <TextView
+                android:id="@+id/roomArea"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@{@string/room_area_text_format(room.data.parentAreaName, room.data.areaName)}"
+                tools:text="娱乐 - 虚拟主播"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/room_info_live_status"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
+            <TextView
+                android:id="@+id/liveStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@{room.data.liveStatus == 1 ? @string/live_status_active : @string/live_status_closed}"
+                tools:text="Closed"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/loadingView"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/room_info_room_id"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
-        <TextView
-            android:id="@+id/roomId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            tools:text="123456"/>
+            android:padding="24dp"
+            android:gravity="center_horizontal"
+            app:isVisible="@{room == null}"
+            tools:alpha="0.1">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/room_info_area"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
-        <TextView
-            android:id="@+id/roomArea"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            tools:text="娱乐 - 虚拟主播"/>
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/room_info_live_status"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
-        <TextView
-            android:id="@+id/liveStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            tools:text="Closed"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/room_info_loading_text"/>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/loadingView"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:gravity="center_horizontal"
-        tools:alpha="0.1">
+    </FrameLayout>
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/room_info_loading_text"/>
-
-    </LinearLayout>
-
-</FrameLayout>
+</layout>
