--- a/app/src/main/res/layout/danmaku_fw_item_view.xml
+++ b/app/src/main/res/layout/danmaku_fw_item_view.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@android:id/text1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="?android:attr/textColorPrimary"
         tools:text="TestUser 12345"/>
