TextInputEditText: Fix meizu old devices/os
Signed-off-by: Siubeng Fung <fython@163.com>

--- a/app/src/main/res/layout/manage_blocked_user_edit_dialog_layout.xml
+++ b/app/src/main/res/layout/manage_blocked_user_edit_dialog_layout.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <moe.feng.danmaqua.ui.common.view.FixedTextInputEditText
             android:id="@android:id/edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
