--- a/app/src/main/res/layout/new_subscription_activity.xml
+++ b/app/src/main/res/layout/new_subscription_activity.xml
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <moe.feng.danmaqua.ui.common.view.FixedTextInputEditText
                 android:id="@+id/roomIdEdit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
