--- a/app/src/main/res/layout/view_vtubers_group_item.xml
+++ b/app/src/main/res/layout/view_vtubers_group_item.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                android:text="@{data.name}"
+                android:text="@{data.title}"
                 tools:text="SiubengLive"/>
 
         </LinearLayout>
